--- a/frontend/app/src/main/res/drawable/rounded_corner.xml
+++ b/frontend/app/src/main/res/drawable/rounded_corner.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+
     <corners android:radius="24dp" />
-    <stroke android:width="1dip" android:color="@color/white" />
+
+    <stroke
+        android:width="2dp"
+        android:color="@color/white" />
+
+    <!-- UWAGA: brak solid (czyli brak tła) -->
+
 </shape>
