--- a/frontend/app/src/main/res/layout/activity_chat_list.xml
+++ b/frontend/app/src/main/res/layout/activity_chat_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@android:color/white"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/messages"
-            android:textColor="@android:color/white"
+            android:textColor="@color/persistent_white"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -33,9 +33,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/new_chat"
-            android:textColor="@android:color/white"
+            android:textColor="@color/persistent_white"
             android:textSize="15sp"
             android:textStyle="bold"
+            android:backgroundTint="@color/launcher_foreground_start"
             android:id="@+id/newChat_btn" />
     </LinearLayout>
 
@@ -53,23 +54,35 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="8dp"
-        android:gravity="center_horizontal">
+        android:gravity="center_vertical">
 
-        <Spinner
-            android:id="@+id/language_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <!-- Ikona po lewej, uniesiona wyżej -->
+        <ImageView
+            android:id="@+id/account_settings_icon"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:focusable="true"
+            android:src="@drawable/icon_account_circle"
+            android:layout_gravity="start"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="4dp"
+            android:clickable="true"
+            android:layout_marginEnd="8dp" />
 
+        <!-- Przestrzeń między ikoną a przyciskiem -->
         <Space
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="1" />
 
+        <!-- Przycisk wylogowania -->
         <Button
             android:id="@+id/logout_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/logout"
+            android:backgroundTint="@color/launcher_foreground_start"
+            android:textColor="@color/persistent_white"
             android:layout_marginStart="8dp" />
     </LinearLayout>
 </LinearLayout>
