--- a/frontend/app/src/main/res/layout/activity_register.xml
+++ b/frontend/app/src/main/res/layout/activity_register.xml
@@ -26,8 +26,8 @@
             android:layout_height="match_parent"
             android:layout_marginTop="32dp"
             android:hint="@string/email"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
+            android:textColor="@color/persistent_white"
+            android:textColorHint="@color/persistent_white"
             android:textSize="13sp"
             android:background="@drawable/rounded_corner"
             android:padding="18dp"
@@ -39,8 +39,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:hint="@string/username"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
+            android:textColor="@color/persistent_white"
+            android:textColorHint="@color/persistent_white"
             android:textSize="13sp"
             android:background="@drawable/rounded_corner"
             android:padding="18dp"
@@ -52,8 +52,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:hint="@string/password"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
+            android:textColor="@color/persistent_white"
+            android:textColorHint="@color/persistent_white"
             android:textSize="13sp"
             android:background="@drawable/rounded_corner"
             android:padding="18dp"
@@ -65,8 +65,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:hint="@string/first_name"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
+            android:textColor="@color/persistent_white"
+            android:textColorHint="@color/persistent_white"
             android:textSize="13sp"
             android:background="@drawable/rounded_corner"
             android:padding="18dp"
@@ -78,8 +78,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:hint="@string/last_name"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
+            android:textColor="@color/persistent_white"
+            android:textColorHint="@color/persistent_white"
             android:textSize="13sp"
             android:background="@drawable/rounded_corner"
             android:padding="18dp"
@@ -91,7 +91,7 @@
             android:layout_height="wrap_content"
             android:text="@string/register"
             android:backgroundTint="@color/white"
-            android:textColor="#054BB3"
+            android:textColor="@color/text_color"
             android:padding="18dp"
             android:layout_marginTop="32dp"
             android:textSize="20sp"
