--- a/frontend/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/frontend/app/src/main/res/drawable/ic_launcher_background.xml
@@ -7,6 +7,6 @@
 
     <!-- Pełne białe tło -->
     <path
-        android:fillColor="#FFFFFF"
+        android:fillColor="@color/white"
         android:pathData="M0,0h108v108h-108z" />
 </vector>
