--- a/frontend/app/src/main/res/drawable/message_bubble_received.xml
+++ b/frontend/app/src/main/res/drawable/message_bubble_received.xml
@@ -1,5 +1,10 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#5A5A5A"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="@color/bubble_received" /> <!-- szary -->
     <corners android:radius="16dp"/>
-    <padding android:left="10dp" android:right="10dp" android:top="5dp" android:bottom="5dp"/>
+    <padding
+        android:left="12dp"
+        android:top="8dp"
+        android:right="12dp"
+        android:bottom="8dp"/>
 </shape>
