--- a/frontend/app/src/main/res/drawable/theme_gradient.xml
+++ b/frontend/app/src/main/res/drawable/theme_gradient.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient android:type="linear" android:angle="100"
-        android:startColor="#054BB3" android:endColor="#00D9FF"/>
+        android:startColor="@color/launcher_foreground_start" android:endColor="@color/launcher_foreground_end"/>
 </shape>
