--- a/frontend/app/src/main/res/layout/activity_main.xml
+++ b/frontend/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_centerInParent="true">
 
         <ImageView
             android:layout_width="160dp"
@@ -22,51 +23,86 @@
             android:src="@drawable/icon_account_circle" />
 
         <EditText
+            android:id="@+id/username_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:hint="@string/username"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
+            android:textColor="@color/persistent_white"
+            android:textColorHint="@color/persistent_white"
             android:textSize="20sp"
             android:background="@drawable/rounded_corner"
             android:padding="18dp"
-            android:inputType="text"
-            android:id="@+id/username_input"/>
+            android:inputType="text" />
 
         <EditText
+            android:id="@+id/password_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:hint="@string/password"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
+            android:textColor="@color/persistent_white"
+            android:textColorHint="@color/persistent_white"
             android:textSize="20sp"
             android:background="@drawable/rounded_corner"
             android:padding="18dp"
-            android:inputType="textPassword"
-            android:id="@+id/password_input"/>
+            android:inputType="textPassword" />
 
         <Button
+            android:id="@+id/login_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/login"
             android:backgroundTint="@color/white"
-            android:textColor="#054BB3"
+            android:textColor="@color/text_color"
             android:padding="18dp"
             android:layout_marginTop="32dp"
-            android:textSize="20sp"
-            android:id="@+id/login_btn" />
+            android:textSize="20sp" />
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/register_btn"
             android:layout_width="150dp"
             android:layout_height="30dp"
             android:text="@string/register"
-            android:textColor="@color/white"
+            android:textColor="@color/persistent_white"
             android:padding="5dp"
             android:background="@drawable/rounded_corner"
-            android:layout_marginTop="20dp"
-            android:id="@+id/register_btn" />
-    </LinearLayout>
+            android:layout_marginTop="20dp" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="16dp"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/switch_lang_btn"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/switch_language"
+                android:backgroundTint="@color/white"
+                android:textColor="@color/text_color"
+                android:padding="10dp"
+                android:textSize="16sp"/>
+
+            <View
+                android:layout_width="16dp"
+                android:layout_height="0dp" />
+
+            <Button
+                android:id="@+id/theme_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/switch_theme"
+                android:backgroundTint="@color/white"
+                android:textColor="@color/text_color"
+                android:padding="10dp"
+                android:textSize="16sp"/>
+        </LinearLayout>
+
+
+    </LinearLayout>
 </RelativeLayout>
