--- a/frontend/app/src/main/res/layout/item_group.xml
+++ b/frontend/app/src/main/res/layout/item_group.xml
@@ -10,6 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Group Name"
-        android:backgroundTint="@color/design_default_color_primary"
-        android:textColor="@android:color/white" />
+        android:textColor="@color/persistent_white"
+        android:backgroundTint="@color/launcher_foreground_end"/>
 </LinearLayout>
