--- a/frontend/app/src/main/res/values/colors.xml
+++ b/frontend/app/src/main/res/values/colors.xml
@@ -2,4 +2,13 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="persistent_white">#FFFFFFFF</color>
+    <color name="launcher_foreground_start">#054BB3</color>
+    <color name="launcher_foreground_end">#00D9FF</color>
+    <color name="microphone_dot">#FF0000</color>
+    <color name="bubble_received">#5A5A5A</color>
+    <color name="bubble_sent">#2196F3</color>
+    <color name="darker_gray">#AAAAAA</color>
+    <color name="text_color">#054BB3</color>
+
 </resources>
